test2 en loader  09-13-2023

--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
 
 <body>
 <!--Loader-->
-    <div class="loader loader--hidden">
+    <div class="loader ">
         <div class="loader__container">
             <span></span>
         </div>
